workloads/helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world-service
  namespace: default
  resourceVersion: "2024053"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8091
  selector:
    app: hello-world
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
